# shipment-forecast-report-generator

./: .gitignore  README.md  pyproject.toml
src/shipment_forecast/: main.py  paths.py
src/shipment_forecast/processing/: consolidate.py
src/shipment_forecast/ui/: app.py
